--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.1.0",
     "gulp-sass": "^2.3.2",
+    "gulp-shell": "^0.6.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
