--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
   "scripts": {
     "postinstall": "mv node_modules/normalize.css/normalize.css node_modules/normalize.css/_normalize.scss"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "gulp-babel": "^7.0.0",
+    "waypoints": "^4.0.1"
+  }
 }
